--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "imagekitio-react": "^2.0.0",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,6 +36,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
