--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.12.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "18.15.8",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
